Fix spacing of header

--- a/src/components/Layout/components/Navbar/styles.module.scss
+++ b/src/components/Layout/components/Navbar/styles.module.scss
@@ -1,5 +1,5 @@
 .nav {
-  padding: 20px;
+  padding: 6px;
   display: flex;
   align-items: center;
   justify-content: space-between;
